--- a/Module2/Ticket_App/activity/style.css
+++ b/Module2/Ticket_App/activity/style.css
@@ -1,131 +1,193 @@
 * {
-  box-sizing: border-box;
-  margin: 0px;
-  padding: 0px;
+    box-sizing: border-box;
+    margin: 0px;
+    padding: 0px;
 }
 
 .header {
-  height: 80px;
-  background-color: #0b0c10;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
+    height: 80px;
+    background-color: #0b0c10;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .tickets-filter {
-  height: 60%;
-  width: 30%;
-  border-radius: 10px;
-  background: #b2bec3;
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+    height: 60%;
+    width: 30%;
+    border-radius: 10px;
+    background: #b2bec3;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 .filter {
-  height: 40%;
-  width: 8%;
-  opacity: 0.8;
-  border-radius: 5px;
-  /* transition: transform 0.5s; */
+    height: 40%;
+    width: 8%;
+    opacity: 0.8;
+    border-radius: 5px;
+    /* transition: transform 0.5s; */
 }
 
 .filter:hover {
-  opacity: 1;
-  /* transform: scale(1.2); */
+    opacity: 1;
+    /* transform: scale(1.2); */
 }
 
 .red {
-  background-color: #d63031;
+    background-color: #d63031;
 }
 
 .blue {
-  background-color: #0984e3;
+    background-color: #0984e3;
 }
 
 .green {
-  background-color: #00b894;
+    background-color: #00b894;
 }
 
 .yellow {
-  background-color: #fdcb6e;
+    background-color: #fdcb6e;
 }
 
 .black {
-  background-color: #2d3436;
+    background-color: #2d3436;
 }
 
 .ticket-actions {
-  height: 60%;
-  width: 8%;
-  background-color: #b2bec3;
-  border-radius: 10px;
-  display: flex;
-  /* justify-content: space-evenly; */
-  /* align-items: center; */
+    height: 60%;
+    width: 8%;
+    background-color: #b2bec3;
+    border-radius: 10px;
+    display: flex;
+    /* justify-content: space-evenly; */
+    /* align-items: center; */
 }
 
 .ticket-actions div {
-  height: 100%;
-  width: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
+    height: 100%;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
 }
 
 .ticket-actions div:hover {
-  background-color: #636e72;
+    background-color: #636e72;
 }
 
 .ticket-actions i {
-  font-size: 20px;
-  color: #2d3436;
+    font-size: 20px;
+    color: #2d3436;
 }
 
 .tickets-container {
-  height: calc(100vh - 80px);
+    height: calc(100vh - 80px);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .ticket-modal {
-  position: absolute;
-  top: 35%;
-  height: 300px;
-  width: 400px;
-  /* border: 1px solid lightgray; */
-  display: flex;
-  left: calc(50vw - 200px);
+    position: absolute;
+    top: 35%;
+    height: 300px;
+    width: 400px;
+    /* border: 1px solid lightgray; */
+    display: flex;
+    left: calc(50vw - 200px);
 }
 
 .ticket-text {
-  /* height: 100%; */
-  width: 70%;
-  background-color: #b2bec3;
-  padding: 14px;
-  outline: none;
-  overflow: auto;
-  font-size: 27px;
+    /* height: 100%; */
+    width: 70%;
+    background-color: #b2bec3;
+    padding: 14px;
+    outline: none;
+    overflow: auto;
+    font-size: 27px;
 }
 
 .ticket-filters {
-  width: 30%;
-  background-color: #0b0c10;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+    width: 30%;
+    background-color: #0b0c10;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .ticket-filter {
-  height: 10%;
-  width: 60%;
-  opacity: 0.8;
+    height: 10%;
+    width: 60%;
+    opacity: 0.8;
 }
 
-.ticket-filter:hover{
-    opacity:1;
+.ticket-filter:hover {
+    opacity: 1;
 }
+
 .selected-filter {
-  border: 3px solid white;
-  opacity: 1;
+    border: 3px solid white;
+    opacity: 1;
+}
+
+.ticket_color_head {
+    /* background: red; */
+    height: 10%;
+    width: 100%;
+}
+
+.ticket_code_delete {
+    padding: 7px;
+    height: 20%;
+    width: 100%;
+    background: white;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    /* flex-direction: row; */
+}
+
+.show-ticket-content {
+    width: 100%;
+    height: 70%;
+    /* background: skyblue; */
+    /* border-radius: 9px; */
+}
+
+.ticket {
+    display: inline-block;
+    height: 185px;
+    width: 49vh;
+    border-radius: 7px;
+    background: #ced6e0;
+    /* justify-content: space-between; */
+    /* flex-direction: column; */
+}
+
+.code {
+    /* justify-content: center; */
+    /* display: inline-block; */
+    /* padding: 2%; */
+    height: 100%;
+    width: 55%;
+    line-height: 100%;
+    /* text-align: center; */
+    /* align-self: center; */
+    /* margin: auto; */
+}
+
+.delete_ticket {
+    /* padding-left: 11px; */
+    display: flex;
+    height: 100%;
+    width: 42%;
+    justify-content: flex-end;
+    align-items: center;
 }
