--- a/Module2/WhiteBoard/activity/style.css
+++ b/Module2/WhiteBoard/activity/style.css
@@ -2,119 +2,166 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+}
+
+body{
     overflow: hidden;
-  }
-  
-  .tools-container {
+}
+
+.tools-container {
     height: 100px;
-    background: aliceblue;
+    /* background: aquamarine; */
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .drawing-container {
-  }
-  
-  #canvas {
-  }
-  .sticky {
-    position: absolute;
-  
-    top: 214px;
-  
-    left: 400px;
-  
-    height: 192px;
-  
-    width: 220px;
-  
-    /* background: turquoise; */
-  
-    /* display: flex; */
-  
-    /* flex-direction: column; */
-  
-    /* align-items: flex-start; */
-  
-    /* justify-content: space-around; */
-  }
-  .sticky-header div {
-    height: 58%;
-  
-    width: 8%;
-  
-    /* background: #e91e63; */
-  
-    margin: 4px;
-  
-    border-radius: 104px;
-  }
-  .sticky-header {
-    height: 15%;
-  
-    width: 100%;
-  
-    background: #fab1a0;
-  
-    display: flex;
-  
-    justify-content: flex-end;
-  
-    align-items: center;
-  
-    flex-direction: row;
-  }
-  .minimise {
-    background: lightskyblue;
-  }
-  .close {
-    background: red;
-  }
-  .sticky-content {
-    outline: none;
-  
-    height: 85%;
-  
-    width: 100%;
-  
-    background: #81ecec;
-  
-    border-bottom-right-radius: 32px;
-  
-    /* margin: 0px; */
-  
-    padding: 6px;
-  
-    font-size: 23px;
-  }
-  .sticky-image{
-      
-  height: 100%;
-      
-  width: 100%;
-      
-  object-fit: cover;
-  }
-  
-  .tools-content {
-    /* border: 1px solid red; */
-    height: 67%;
-    width: 77%;
+}
+
+.tools-content {
+    height: 70%;
+    width: 70%;
+    /* border: 1px solid; */
     display: flex;
     justify-content: space-evenly;
-    background-color: #a6f7ff;
-    border-radius: 16px;
     align-items: center;
-  }
-  
-  .tool {
-    height: 60%;
-    width: 50%;
-  }
-  
-  .tool img {
+    background: aliceblue;
+    border-radius: 10px;
+}
+
+.tool {
+    height: 55%;
+    width: 10%;
+    position: relative;
+}
+
+.tool img {
     height: 100%;
     width: 100%;
-  }
-  
+}
+
+.drawing-container {
+}
+
+#canvas {
+    /* background-color: aqua; */
+}
+
+.sticky {
+    position: absolute;
+    top: 200px;
+    left: 300px;
+    height: 200px;
+    width: 250px;
+    /* background: bisque; */
+}
+
+.sticky-header {
+    height: 13%;
+    background: lightcyan;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.sticky-header div {
+    height: 70%;
+    width: 7%;
+    margin-right: 10px;
+    border-radius: 50px;
+}
+
+.minimize {
+    background: lightskyblue;
+}
+
+.close {
+    background: lightcoral;
+}
+
+.sticky-content {
+    height: 87%;
+    /* border: 1px solid; */
+    border-bottom-right-radius: 20px;
+    background: lightsteelblue;
+    outline: none;
+    padding: 10px;
+}
+
+.sticky-image-div {
+    height: 87%;
+}
+
+.sticky-image {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.active-tool {
+    /* transform: scale(1.2); */
+}
+
+.fade {
+    opacity: 0.5;
+}
+
+.tool-options {
+    height: 100px;
+    width: 100px;
+    position: absolute;
+    /* background: aquamarine; */
+    top: 60px;
+    display: flex;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 2px;
+    background: aliceblue;
+}
+
+.hide {
+    display: none;
+}
+
+.pen-size {
+}
+
+.pen-size input {
+    width: 100%;
+}
+
+.eraser-size input{
+    width: 100%;
+}
+
+
+.pen-colors {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.pen-colors div {
+    height: 15px;
+    width: 14px;
+    border-radius: 50px;
+}
+
+.black {
+    background: black;
+}
+
+.yellow {
+    background: yellow;
+}
+
+.blue {
+    background: blue;
+}
+
+.green {
+    background: green;
+}
+
+.red {
+    background: red;
+}
