--- a/Module2/Ticket_App/activity/style.css
+++ b/Module2/Ticket_App/activity/style.css
@@ -2,11 +2,12 @@
     box-sizing: border-box;
     margin: 0px;
     padding: 0px;
+    font-family: 'Lato', sans-serif;
 }
 
 .header {
     height: 80px;
-    background-color: #0b0c10;
+    background-color: #0B0C10;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -84,11 +85,13 @@
 }
 
 .tickets-container {
-    height: calc(100vh - 80px);
+    height: calc( 100vh - 80px );
+    padding: 20px;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: flex-start;
+    grid-gap: 30px;
 }
 
 .ticket-modal {
@@ -105,15 +108,15 @@
     /* height: 100%; */
     width: 70%;
     background-color: #b2bec3;
-    padding: 14px;
     outline: none;
+    padding: 15px;
+    font-size: 25px;
     overflow: auto;
-    font-size: 27px;
 }
 
 .ticket-filters {
     width: 30%;
-    background-color: #0b0c10;
+    background-color: #0B0C10;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -123,7 +126,7 @@
 .ticket-filter {
     height: 10%;
     width: 60%;
-    opacity: 0.8;
+    opacity: 0.5;
 }
 
 .ticket-filter:hover {
@@ -135,59 +138,46 @@
     opacity: 1;
 }
 
-.ticket_color_head {
-    /* background: red; */
-    height: 10%;
-    width: 100%;
-}
-
-.ticket_code_delete {
-    padding: 7px;
-    height: 20%;
-    width: 100%;
-    background: white;
-    display: flex;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: space-between;
-    align-items: center;
-    /* flex-direction: row; */
-}
-
-.show-ticket-content {
-    width: 100%;
-    height: 70%;
-    /* background: skyblue; */
-    /* border-radius: 9px; */
-}
-
 .ticket {
-    display: inline-block;
-    height: 185px;
-    width: 49vh;
-    border-radius: 7px;
-    background: #ced6e0;
-    /* justify-content: space-between; */
-    /* flex-direction: column; */
+    /* background: aquamarine; */
+    height: 150px;
+    width: 250px;
+    border: 1px solid lightgray;
 }
 
-.code {
-    /* justify-content: center; */
-    /* display: inline-block; */
-    /* padding: 2%; */
-    height: 100%;
-    width: 55%;
-    line-height: 100%;
-    /* text-align: center; */
-    /* align-self: center; */
-    /* margin: auto; */
+.ticket-header {
+    height: 10%;
 }
 
-.delete_ticket {
-    /* padding-left: 11px; */
+.ticket-content {
+    height: 90%;
     display: flex;
-    height: 100%;
-    width: 42%;
-    justify-content: flex-end;
+    flex-direction: column;
+    justify-content: space-around;
     align-items: center;
+    padding: 10px;
+}
+
+.ticket-info {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.ticket-info div {
+}
+
+.ticket-value {
+    height: 80%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    word-break: break-all;
+}
+
+.active-filter{
+    border: 2px solid white;
+    opacity: 1;
+    transform: scale(1.2);
 }
